oscen-macros/tests/ui/multi_error_mixed.stderr
error: node undersampling (`/ N`) is not yet supported in v1; only oversampling (`* N`) is implemented
  --> tests/ui/multi_error_mixed.rs:11:9
   |
11 |         osc = PolyBlepOscillator::saw(440.0, 0.6) / 2;
   |         ^^^

error: Type mismatch in connection: source is Stream but destination expects Value
  --> tests/ui/multi_error_mixed.rs:15:9
   |
15 |         s -> v_out;
   |         ^^^^^^^^^^

warning: unused import: `PolyBlepOscillator`
 --> tests/ui/multi_error_mixed.rs:1:20
  |
1 | use oscen::{graph, PolyBlepOscillator};
  |                    ^^^^^^^^^^^^^^^^^^
  |
  = note: `#[warn(unused_imports)]` (part of `#[warn(unused)]`) on by default
